website and jar updates